--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ikonik - Responsive HTML5 vCard Template">
+        <meta name="description" content="ishtiakishti- promotinal content creator">
         <meta name="keywords" content="vcard, html5, portfolio">
         <meta name="author" content="Pixelwars">
         <meta name="theme-color" content="#1755cf" />
@@ -12,8 +12,8 @@
         <title>ishtiakishti</title>
 
         <!-- FAV and TOUCH ICONS -->
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+        <link rel="shortcut icon" href="images/home/icon.svg">
+        <link rel="apple-touch-icon" href="images/home/icon.svg">
 		 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/fonts/jost/jost.css">
