--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ikonik - Responsive HTML5 vCard Template">
+    <meta name="description" content="ishtiakishti- promotinal content creator">
     <meta name="keywords" content="vcard, html5, portfolio">
     <meta name="author" content="Pixelwars">
     <meta name="theme-color" content="#1755cf" />
@@ -12,8 +12,8 @@
     <title>ishtiakishti</title>
 
     <!-- FAV and TOUCH ICONS -->
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+    <link rel="shortcut icon" href="images/home/icon.svg">
+    <link rel="apple-touch-icon" href="images/home/icon.svg">
 
     <!-- FONTS -->
     <link rel="stylesheet" href="css/fonts/jost/jost.css">
@@ -216,7 +216,7 @@
                                       <!-- section-title -->
                                       <div class="section-title center">
                                           <h2>
-                                              <i>Interests</i>
+                                              <i>What I do</i>
                                           </h2>
                                       </div>
                                       <!-- section-title -->
@@ -230,8 +230,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-01.svg" alt="image" />
-                                                  <h3>UI/UX Design</h3>
-                                                  <p>I study users, understand their behavior and architect a user journey, enabling the user to do their tasks with ease.</p>
+                                                  <h3>Design</h3>
+                                                  <p>Any business today needs a website that wins customers' trust and helps their do their business well. I design beautiful and powerful websites for your modern business and make sure your website is upto that standard. </p>
                                               </div>
                                               <!-- service -->
 
@@ -245,7 +245,9 @@
                                               <div class="service">
                                                   <img src="images/site/service-02.svg" alt="image" />
                                                   <h3>Animation</h3>
-                                                  <p>I create animated video posts for getting more leads and converting them into customers.</p>
+                                                  <p>Animated videos helps to gain recognition of any service and sell products quickly. I create amazing short videos for you with Motion Graphic effects which are very useful to attract new customers and increase the sales and repuation of any business in social media and the market.
+
+                                                </p>
                                               </div>
                                               <!-- service -->
 
@@ -259,7 +261,7 @@
                                               <div class="service">
                                                   <img src="images/site/service-03.svg" alt="image" />
                                                   <h3>Video Editing</h3>
-                                                  <p>I edit and assemble recorded raw material into a suitable, finished product ready for broadcasting.</p>
+                                                  <p>Anyone who has a message, dream, business, brand, or something they want to get out to the world, video is the most effective way to do it. I can edit videos for your YouTube channels, commercials, social media ads etc and help you showcase your message to the world.</p>
                                               </div>
                                               <!-- service -->
 
@@ -272,8 +274,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-04.svg" alt="image" />
-                                                  <h3>Data Science </h3>
-                                                  <p> I am a data science enthusiast. Still learning the basics. Will be writing blogs about this in my blog section. </p>
+                                                  <h3>Development </h3>
+                                                  <p> Website is the best way to make people aware of the services and/or products you are offering. I can develop websites according to your requirements. I can also redesign or redevelop your existing websites.</p>
                                               </div>
                                               <!-- service -->
 
