--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ikonik - Responsive HTML5 vCard Template">
+        <meta name="description" content="ishtiakishti- promotinal content creator">
         <meta name="keywords" content="vcard, html5, portfolio">
         <meta name="author" content="Pixelwars">
         <meta name="theme-color" content="#1755cf" />
@@ -12,8 +12,8 @@
         <title>ishtiakishti</title>
 
         <!-- FAV and TOUCH ICONS -->
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+        <link rel="shortcut icon" href="images/home/icon.svg">
+        <link rel="apple-touch-icon" href="images/home/icon.svg">
 		 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/fonts/jost/jost.css">
@@ -83,10 +83,10 @@
                 <p class="home-job-title">Promotional Content Creator</p>
 
                 <p class="home-marquee">
-                    I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                    I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                    I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                    I create promotional contents and user interfaces for various businesses and also I love cats and coffee.  
+                    I create promotional contents and user interfaces for various businesses.
+                    I create promotional contents and user interfaces for various businesses.
+                    I create promotional contents and user interfaces for various businesses.
+                    I create promotional contents and user interfaces for various businesses.
                 </p>
 
                 <i class="home-logo-left "><span>Promotional</span></i>
