--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ikonik - Responsive HTML5 vCard Template">
+        <meta name="description" content="ishtiakishti- promotinal content creator">
         <meta name="keywords" content="vcard, html5, portfolio">
         <meta name="author" content="Pixelwars">
         <meta name="theme-color" content="#1755cf" />
@@ -12,8 +12,8 @@
         <title>ishtiakishti</title>
 
         <!-- FAV and TOUCH ICONS -->
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+        <link rel="shortcut icon" href="images/home/icon.svg">
+        <link rel="apple-touch-icon" href="images/home/icon.svg">
 		 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/fonts/jost/jost.css">
@@ -226,7 +226,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/01.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/watch?v=NAn6PqAeAUQ" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/watch?v=NAn6PqAeAUQ"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -243,7 +243,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/02.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/watch?v=w2_2x1nJ_Lc" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/watch?v=w2_2x1nJ_Lc"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -260,7 +260,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/03.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/watch?v=UMilOsi4_TA" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/watch?v=UMilOsi4_TA"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -277,7 +277,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/04.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=4023284937715067" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=4023284937715067"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -294,7 +294,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/05.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=247832713558482" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=247832713558482"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -311,7 +311,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/06.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=284943662983059" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=284943662983059"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -328,7 +328,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/07.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=156377185848260" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=156377185848260"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -345,7 +345,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/08.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/watch?v=7zm3nwfJeqg" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/watch?v=7zm3nwfJeqg"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -362,7 +362,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/08.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/watch?v=ltl4Q8PFgYU" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/watch?v=ltl4Q8PFgYU"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -379,7 +379,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/17.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://docs.google.com/document/d/1_oa4a07VF6mgfUSI7HFg-UYMfEt3tHqA4s2UT3polEs/edit?usp=sharing" class="ajax"></a>
+                                                    <a href="https://docs.google.com/document/d/1_oa4a07VF6mgfUSI7HFg-UYMfEt3tHqA4s2UT3polEs/edit?usp=sharing"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -464,7 +464,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/07.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=156377185848260" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=156377185848260"  ></a>
                                                 </div>
 
                                                 <div class="media-cell-desc">
@@ -482,7 +482,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/15.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=2855063188038373" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=2855063188038373"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Promo</h3>
@@ -496,7 +496,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/14.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=138957511499359" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=138957511499359"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Promo</h3>
@@ -510,7 +510,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/13.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=398504417792050" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=398504417792050"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Promo</h3>
@@ -524,7 +524,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/12.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNHDik6H2gx_Mu20bYObcrh" class="ajax"></a>
+                                                    <a href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNHDik6H2gx_Mu20bYObcrh"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Intro</h3>
@@ -540,7 +540,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/11.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=138730101379342" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=138730101379342"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Tech in 2020!</h3>
@@ -554,7 +554,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/10.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=893852177811306&extid=g9N8e0ZXsuqVY0ys" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=893852177811306&extid=g9N8e0ZXsuqVY0ys"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Announcement</h3>
@@ -568,7 +568,7 @@
                                                 <div class="media-box">
                                                     <img src="images/portfolio/16.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
-                                                    <a href="https://www.facebook.com/watch/?v=987082788364541" class="ajax"></a>
+                                                    <a href="https://www.facebook.com/watch/?v=987082788364541"  ></a>
                                                 </div>
                                                 <div class="media-cell-desc">
                                                     <h3>Promo</h3>
