--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ikonik - Responsive HTML5 vCard Template">
+        <meta name="description" content="ishtiakishti- promotinal content creator">
         <meta name="keywords" content="vcard, html5, portfolio">
         <meta name="author" content="Pixelwars">
         <meta name="theme-color" content="#1755cf" />
@@ -12,8 +12,8 @@
         <title>ikonik</title>
 
         <!-- FAV and TOUCH ICONS -->
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+        <link rel="shortcut icon" href="images/home/icon.svg">
+        <link rel="apple-touch-icon" href="images/home/icon.svg">
 		 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/fonts/jost/jost.css">
@@ -301,11 +301,10 @@
                                                 <!-- Testimonial -->
                                                 <div class="testo">
                                                     <img src="images/site/testo-01.jpg" alt="someone">
-                                                    <h3>Chris Jones</h3>
-                                                    <h5>CEO / Dream Inc.</h5>
-                                                    <p>He is a great and hardworking guy. I am so proud of i have him
-                                                        as my asistant. He helped me so much. Also i am so proud of i
-                                                        have him as my asistant. He helped me so much.</p>
+                                                    <h3>Sazzadur Rahman Rafi</h3>
+                                                    <h5>Consultant Identity Inclusion</h5>
+                                                    <p>rahman46@purdue.edu</p>
+                                                    <p>Ishtiak has made a wonderful video for Identity Inclusion. Rafin's creativity and dedication amazed me while working with him</p>
 
                                                 </div>
                                                 <!-- Testimonial -->
@@ -313,10 +312,11 @@
                                                 <!-- Testimonial -->
                                                 <div class="testo">
                                                     <img src="images/site/testo-02.jpg" alt="someone">
-                                                    <h3>Melody Coen</h3>
-                                                    <h5>Chemist / Freelancer</h5>
-                                                    <p>He was a great co-worker and a friend. I would't be where i am
-                                                        without his support.</p>
+                                                    <h3>Nurjahan Chowdhury</h3>
+                                                    
+                                                    <h5>Company Secretary, Stellar Digital Limited</h5>
+                                                    <p>nurjahan@bongobd.com</p>
+                                                    <p>During the period of his internship program with us he was found punctual, hardworking and inquisitive. We wish him every success in life.</p>
 
                                                 </div>
                                                 <!-- Testimonial -->
@@ -325,9 +325,10 @@
                                                 <div class="testo">
                                                     <img src="images/site/testo-03.jpg" alt="someone">
 
-                                                    <h3>Jason Wilson</h3>
-                                                    <h5>Lab Geek / Houston Tower</h5>
-                                                    <p>He is ok. I don't really know him. He looks nice.</p>
+                                                    <h3>The Bangladeshi Perspective Team</h3>
+                                                    <h5></h5>
+                                                    <p>thebangladeshiperspective@gmail.com </p>
+                                                    <p>During the time of internship, he contributed great content to The Bangladeshi Perspective and also contributed significantly to developing new types of content. The success of this position heavily relied on the skills displayed by him and the dedication towards his work. The Bangladeshi Perspective is thankful for Ishtiak Ahmed Khan's time with us, and we hope for him a bright future. With this being said, we are pleased to recommend Ishtiak Ahmed Khan for his character, skills, and work ethic.</p>
 
                                                 </div>
                                                 <!-- Testimonial -->
