--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@
                                                         <!--<i class="pe-7s-map-marker"></i>-->
                                                         <img src="images/site/icon-location.svg" alt="image" />
                                                         <!--<img src="images/site/icon-03.png" alt="image"/>-->
-                                                        <p>based in Dhaka, Bangladesh</p>
+                                                        <p>Based in Dhaka, Bangladesh</p>
                                                     </div>
                                                     <!-- fun-fact -->
     
