--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
 
                                               <div class="col-sm-9">
 
-                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed, a <strong>promotinal content creator</strong> based in Dhaka, Bangladesh.
+                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed, a <strong>promotional content creator</strong> based in Dhaka, Bangladesh.
                                                 I create promotional contents and user interfaces for various businesses and also I love cats and coffee. 
                                                   </h2>
 
