--- a/resume.html
+++ b/resume.html
@@ -233,7 +233,7 @@
 
                                                 <div class="event">
                                                     <h3>Sept 2020 - Present</h3>
-                                                    <h4>Creative Assiciate</h4>
+                                                    <h4>Creative Associate</h4>
                                                     <h5>Youth Policy Forum</h5>
                                                     <p>This is a platform to discuss, debate and learn about the most pressing policy challenges that our country and our world face today and as a creative associate I try to spread this knowledge among the youths of our country through my contents.</p>
                                                 </div>
