--- a/contact.html
+++ b/contact.html
@@ -283,53 +283,15 @@
 
 
 
-                                        <!-- section-title -->
                                         <div class="section-title center">
                                             <h2>
-                                                <i>Drop Me A Line</i>
+                                                <i>Schedule a Meeting</i>
                                             </h2>
                                         </div>
-                                        <!-- section-title -->
-
-                                        <h2 class="center fw-300">Ask me anything and <br> Find out if I'm <strong>available</strong>
-                                           
-                                            
-                                        </h2>
-
-
-                                        <!-- .contact-form -->
-                                        <div class="contact-form">
-
-                                            <form id="contact-form" class="validate-form" method="post" action="send-mail.php">
-
-                                                <!-- enter mail subject here -->
-                                                <input type="hidden" name="subject" id="subject" value="You have a new message from ikonik!">
-
-                                                <p>
-                                                    <input placeholder="Name" type="text" name="name" id="name" class="required">
-                                                </p>
-
-                                                <p>
-                                                    <input placeholder="Email" type="text" name="email" id="email"
-                                                        class="required email">
-                                                </p>
-
-                                                <p class="antispam">Leave this empty if you are a human :
-                                                    <br /><input name="url" />
-                                                </p>
-
-                                                <p>
-                                                    <textarea placeholder="Message" name="message" id="message" class="required"></textarea>
-                                                </p>
-
-                                                <p>
-                                                    <button class="submit button primary">Send</button>
-                                                </p>
-
-                                            </form>
-
-                                        </div>
-                                        <!-- .contact-form -->
+                                        <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/ishtiakishti/30min" style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
 
 
 
