--- a/resume.html
+++ b/resume.html
@@ -304,7 +304,18 @@
                                                     <h3>Sazzadur Rahman Rafi</h3>
                                                     <h5>Consultant Identity Inclusion</h5>
                                                     <p>rahman46@purdue.edu</p>
-                                                    <p>Ishtiak has made a wonderful video for Identity Inclusion. Rafin's creativity and dedication amazed me while working with him</p>
+                                                    <p>Ishtiak has made a wonderful video for Identity Inclusion. Rafin's creativity and dedication amazed me while working with him.</p>
+
+                                                </div>
+                                                <!-- Testimonial -->
+						    
+						 <!-- Testimonial -->
+                                                <div class="testo">
+                                                    <img src="images/site/testo-04.jpg" alt="someone">
+                                                    <h3>Sadat Bin Haque</h3>
+                                                    <h5>Jr. Product Manager</h5>
+                                                    <p>sadatbinhaque@gmail.com</p>
+                                                    <p>Rafin worked as a motion designer for IUT Career & Business Society. He is a very skillful and talented individual. He efficiently visualised many creative ideas and helped to strengthen the brand image. His contributions had significant impact for increasing the social media reach of our club.</p>
 
                                                 </div>
                                                 <!-- Testimonial -->
