--- a/resume.html
+++ b/resume.html
@@ -313,7 +313,7 @@
                                                 <div class="testo">
                                                     <img src="images/site/testo-04.jpg" alt="someone">
                                                     <h3>Sadat Bin Haque</h3>
-                                                    <h5>Jr. Product Manager</h5>
+                                                    <h5>Jr. Product Manager, ShopUp</h5>
                                                     <p>sadatbinhaque@gmail.com</p>
                                                     <p>Rafin worked as a motion designer for IUT Career & Business Society. He is a very skillful and talented individual. He efficiently visualised many creative ideas and helped to strengthen the brand image. His contributions had significant impact for increasing the social media reach of our club.</p>
 
