--- a/resume.html
+++ b/resume.html
@@ -257,9 +257,9 @@
                                                     <h3>2019 - Present</h3>
                                                     <h4>BSc in Mechanical Engineering</h4>
                                                     <h5>Islamic University of Technology (IUT) </h5>
-                                                    <p>Joint Secretary (Branding), IUT Career and Business Society <br>
-						       Head of Public Relations, IUT Mars Rover <br>
-						       Secretary (Media and Public Engagement), ANTS </p>
+                                                    <p><ol type= "circle"> <li> Joint Secretary (Branding), IUT Career and Business Society </li> <br>
+						       <li> Head of Public Relations, IUT Mars Rover </li> <br>
+							<li> Secretary (Media and Public Engagement), ANTS </li></ol></p>
                                                 </div>
 
 
