--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="portfolio.html" data-slug="portfolio" id="portfolio-link">
                 <span class="item-name">Portfolio</span>
             </a>
-            <a href="404.html" data-slug="blog">
+            <a href="blog-category.html" data-slug="blog">
                 <span class="item-name">Blog</span>
             </a>
             <a href="contact.html" data-slug="contact">
