--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -295,6 +295,9 @@
                                             <i>**Here I focused only on the name of the topics you need to know, not the details around it **</i>
                                             <br>
                                             <br>
+					    <u><a href="https://forms.gle/FkPw1zKfQmJ1fJp18" >Leave your review and thoughts here.</a></u>
+                                            <br>
+                                            <br>
                                             <b><i>Keep learning and have a good day.</i></b>
                                             
                                         </p>
