--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -295,7 +295,7 @@
                                             <i>**Here I focused only on the name of the topics you need to know, not the details around it **</i>
                                             <br>
                                             <br>
-					    <u><a href="https://forms.gle/FkPw1zKfQmJ1fJp18" >Leave your review and thoughts here.</a></u>
+					    <u><a href="https://forms.gle/FkPw1zKfQmJ1fJp18" >Leave your thoughts and reviews here.</a></u>
                                             <br>
                                             <br>
                                             <b><i>Keep learning and have a good day.</i></b>
