--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -280,10 +280,11 @@
                                             Likewise front-end development here also you will need to learn about the internet, how search engines work, GitHub, basic usage of Git and knowledge about web security. Other than these, you will need to get some general knowledge about OS.
                                             <br>
                                             <br>
-                                            Next you will need to learn at least two languages (Recommending: Python and JavaScript). You will also need to learn about relational databases like PostgreSQL, MySQL etc. Learn about APIs (Application Program Interface is how front-end developers use backend. These are some defined protocols which the frontend applications can use to get the data). You can learn about REST APIs, JSON APIs, API Authentication.
+                                            Next learn any of the server side programming languages like python, javascript, php, ruby, c# etc.Learning django if starting with python or express if starting with javascript are two of the most popular first choices. You will also need to learn about relational databases like PostgreSQL, MySQL etc. Learn about APIs (Application Program Interface is how Front-end developers use backend through Application Program Interface(API). These are some defined protocols which the frontend applications can use to get the data). You can learn about REST APIs, JSON APIs, API Authentication.
+
                                             <br>
                                             <br>
-                                            Then you will also need to learn about caching, testing (Integration Testing, Unit Testing, Functional Testing), design and development principles, architectural patterns like Apache Kafka.
+                                            Then you will also need to learn about caching, testing (Integration Testing, Unit Testing, Functional Testing), design and development principles.
                                             <br>
                                             <br>
                                             Also, you will need to know about containerization platforms like docker which is used to package your application and all its dependencies together in the form of containers to make sure that your application works seamlessly in any environment which can be development or test or production.
