--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -32,6 +32,15 @@
 
     <!-- INITIAL SCRIPTS -->
 <script src="js/jquery.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TH4MRNGLDN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TH4MRNGLDN');
+</script>
 </head>
 
 
