--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -2,6 +2,15 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V5EQWW4CJJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V5EQWW4CJJ');
+</script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ishtiakishti- promotinal content creator">
@@ -30,17 +39,7 @@
     <link rel="stylesheet" type="text/css" href="css/768.css">
 
 
-    <!-- INITIAL SCRIPTS -->
-<script src="js/jquery.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TH4MRNGLDN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-TH4MRNGLDN');
-</script>
 </head>
 
 
