--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -3,13 +3,13 @@
 <head>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-V5EQWW4CJJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3TGCDK9XBN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-V5EQWW4CJJ');
+  gtag('config', 'G-3TGCDK9XBN');
 </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
