--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     data-off-text="Music off">Music off</a></div>
         </div>
 
-        <audio id="bg-music" loop src="audio/music2.mp3"></audio>
+        <audio id="bg-music" loop src="http://youtuberepeater.com/watch?v=HcxLMPQU3-w&name=SnareByt+DEADBUNNY+Takita+Official+Music+Video+A2F+Release#gsc.tab=0"></audio>
         <!-- HOME BG MUSIC -->
 
         <!-- REMOVE THIS MARKUP TO DISABLE BG AUDIO -->
