--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     data-off-text="Music off">Music off</a></div>
         </div>
 
-        <audio id="bg-music" loop src="https://www.youtube.com/watch?v=BFPmXAFFSjA"></audio>
+        <audio id="bg-music" loop src="audio/music2.mp3"></audio>
         <!-- HOME BG MUSIC -->
 
         <!-- REMOVE THIS MARKUP TO DISABLE BG AUDIO -->
